# NTMF021-random_walks

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build_no_fut.rs  config.json  config_small.json
futhark/: walk.fut
src/: main.rs  walks.rs
