[package]
name = "random_walks"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
libmath = "0.2.1"
crossterm = "0.25.0"

[build-dependencies]
futhark-bindgen = {git = "https://github.com/zshipko/futhark-bindgen", default-features=false, features=["build"]}